@@ -1,7 +1,11 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
-
+- Duktape support for Metric Age / Stale
+  New Duktape methods
+    OvmsMetrics.IsStale
+    OmvsMetrics.IsFresh
+    OvmsMetrics.Age
 2024-03-23 MB   3.3.004  OTA release
 - MG EV Added support for MG5 (2020 - 2023) Short Range
 - MG EV Added support for MG ZS EV (2023 - ) and MG5 (2020 - 2023) Long Range
